--- a/research.htm
+++ b/research.htm
@@ -37,18 +37,13 @@
         <a id="smallscreen" href="index.htm"><i class='fa fa-home'></i> <span></span> Home</a>        
         <h1 id='Music Emotion'>"A Novel Music Recommendation System using Music-Emotion Recognition Models"</h1>
         <p>In this study, I compare a emotion-based music recommendation system with a traditional style-and-
-        artists-based music recommendation system adapted by most music streaming services nowadays. I build
-        3 machine learning systems: a baseline model using K-means clustering, a Support Vector Machine (SVM)
-        and Random Forests Model with low-level musical feature dataset, and another Support Vector Machine (SVM)
-        and Random Forests Model with Spotify features that established based on the prior model. In the last 2
-        models, to quantize emotion as a measurable variable, I use the classic Russell's emotion ring that
-        classifies 4 basic types of emotions--excitement, calm, depression, and anger--into a quadrant. After trainings,
+        artists-based music recommendation system adapted by most music streaming services nowadays. To quantize emotion as a measurable variable, 
+          I use the classic Russell's emotion ring that
+        classifies 4 basic types of emotions--excitement, calm, depression, and anger--into a quadrant. After trainings 3 different machine learning models,
         the music-emotion recognizer is able to reach almost 80% accuracy F1 score. It demonstrates especial
         capability in predicting emotions excitement and anger.</p>
         <img src="activity3.png" alt="Research">
-        <h2>Abstract</h2>
-        <p>Since ancient times, music has played a critical role in affecting people’ emotions. However, due to the ambiguity of the definition of emotions and the varied musical features, it poses a difficulty for people to establish an explainable relationship between musical features and musical emotions. A novel music recommendation system is trained based on this relationship between musical low-level features and four types of emotions based on Russell’s emotional ring. The ring places four emotions into four quadrants where x-axis represents arousal, the intensity of emotions, and y-axis represents valence, the positiveness of emotions. Compared to the traditional genre-and-artists-based music clustering model as a baseline, data of low-level features is extracted to predict four musical emotions using the random forests model and the Support Vector Machine (SVM). The music-emotion recognition (MER) models reach 79.4% F1 score as the best accuracy rate. Based on the confusion matrices visualizing the prediction’s accuracy in each emotional quadrant, the models classify the arousal degree well but find some difficulties identifying valence degree, especially in identifying the emotions calm and depression. This difference in results is caused by the varied weights of each low-level features when the models are trained. The great weights in tone color and intensity allow the machine to identify the arousal levels. However, the features that affect the identification of valence level, including expressive techniques, valence, and speechiness, are placed with little significance in the models. Through the experiments, a correlation between musical features and its emotions is established. It leaves a better understanding of the impact of music on human emotions and suggests a novel approach for musical recommendation system.</p>
-
+      
          <h1 id="Responsibility Aversion"><br>"An Analysis on the Relationship between
          Leadership and Responsibility Aversion"</h1>
          <p>As leadership increasingly becomes critical for society today, we grow interest in the
@@ -63,9 +58,7 @@
          in taking leaders’ roles. Furthermore, leaders who understand that their decisions and
          attitudes would affect group morale and efficiency are more responsible for their groups. </p>
          <img src="research2.png" alt="Research">
-         <h2>Abstract</h2>
-         <p>Throughout history, leaders have performed a crucial role in leading society forward. As we enter modern society, corporations and governments correspondingly require leaders to have strong collaboration and communication skills to promote further progress in all aspects of society. Mostly, leadership is the ability of making decisive decisions for groups’ benefits and being accountable for the collective actions and their consequences. However, it appears that leaders' responsibilities have become a burden to many in recent years. It can lead to responsibility aversion, the preference to minimize one's causal role in outcome generation. Since responsibility aversion can be generally perceived as the avoidance of pressure and consequences, it gradually becomes a negative outcome of serving as a leader. Therefore, we decided to take a closer look at the causes and impacts of responsibility aversion. We hypothesize that a direct correlation exists between responsibility aversion and the tasks of leaders as well as the expectations placed on them by the surroundings. After careful analysis of the questionnaire, the study argues that leadership is correlated to responsibilities held by the leaders. The conclusion corresponded to the hypothesis, suggesting that the extent of aversion is influenced by duties associated with leaders’ roles, including fostering group cohesion, building interpersonal relationships, making decisions, anticipating potential failures, and confronting blames for errors. Common attributes of leadership positions, such as organizational size and leaders' working hours, also contribute to responsibility aversion. This aversion, in turn, has made a dent in leaders' overall effectiveness, the trust and morale of their groups. The study established a general correlation between leadership and responsibility aversion, suggesting both the significance of leadership and the impact of the duty of responsibility on leaders. Society now could take a more objective view of what leaders carry to an environment and how the environment shapes them.</p>
-    </div>
+        
     </div>
 
 
