--- a/index.htm
+++ b/index.htm
@@ -40,24 +40,23 @@
 <div class='intro' id='container'>
 <a class="prev" onclick="plusSlides(-1)" style="text-align: left">&#10094;</a>
     <div class='slides'>
-      <div class='number-order'>1/4</div>
+      <div class='number-order'>1/3</div>
          <img src="member1.jpg"/>
     </div>
 
     <div class='slides'>
-            <div class='number-order'>2/4</div>
+            <div class='number-order'>2/3</div>
                 <img src="slide2.jpg"/>
+        <p>Me in the school play The Magi</p> 
         </div>
 
     <div class='slides'>
-            <div class='number-order'>3/4</div>
+            <div class='number-order'>3/3</div>
                 <img src="slide3.jpg"/>
+        <p>Me in the Heritage Restoration Volunteer Service</p>
         </div>
 
-    <div class='slides'>
-            <div class='number-order'>4/4</div>
-                <img src="slide4.jpg" />
-        </div>
+  
 <!-- buttons of pictures -->
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
