--- a/brailleblog.htm
+++ b/brailleblog.htm
@@ -58,6 +58,18 @@
             <img class="OriginalImage" src="BrailleBlog/dataset.png" alt="The Mysterious House 1">
     </div>
 
+    <div class="blog">
+        <!-- Blog content for the first post -->
+        <h1><sup>9</sup> / <sub>17</sub><sub class='year'>, 2023</sub></h1>
+         <h2>First Step: Train a Machine Learning Model</h2>
+          <p>In the video, I walked through the steps of creating a Braille recognizer model.
+          After using two deep learning models, resizing the training set of Braille images, and 
+          training it for a dozen of times, the accuracy of the predictions reached 98%! </p>
+        <video width="320" height="240" controls>
+            <source src="BrailleBlog/meeting_02.mp4" type="video/mp4">
+        </video>
+    </div>
+
 </div>
       </main>
 
