--- a/brailleblog.htm
+++ b/brailleblog.htm
@@ -37,7 +37,7 @@
           <div class="blog-container">
     <div class="blog">
         <!-- Blog content for the first post -->
-        <h1><sup>9</sup> / <sub>8</sub><sub class='year'>, 2023</sub></h1>
+        <h1><sup>September</sup> / <sub>8</sub><sub class='year'>, 2023</sub></h1>
          <h2>My Inspiration for the Braille Translator</h2>
         <video width="320" height="240" controls>
             <source src="BrailleBlog/meeting_01.mp4" type="video/mp4">
@@ -45,7 +45,7 @@
     </div>
     <div class="blog">
         <!-- Blog content for the first post -->
-        <h1><sup>9</sup> / <sub>11</sub><sub class='year'>, 2023</sub></h1>
+        <h1><sup>September</sup> / <sub>11</sub><sub class='year'>, 2023</sub></h1>
            <h2>Braille Dataset</h2>
            <p>To make a machine learning system that can recognize Braille characters
            and translate them into English, we first collected a dataset of Braille characters
@@ -60,7 +60,7 @@
 
     <div class="blog">
         <!-- Blog content for the first post -->
-        <h1><sup>9</sup> / <sub>17</sub><sub class='year'>, 2023</sub></h1>
+        <h1><sup>September</sup> / <sub>17</sub><sub class='year'>, 2023</sub></h1>
          <h2>First Step: Train a Machine Learning Model</h2>
           <p>In the video, I walked through the steps of creating a Braille recognizer model.
           After using two deep learning models, resizing the training set of Braille images, and 
@@ -69,6 +69,16 @@
             <source src="BrailleBlog/meeting_02.mp4" type="video/mp4">
         </video>
     </div>
+     <div class="blog">
+        <!-- Blog content for the first post -->
+        <h1><sup>September</sup> / <sub>25</sub><sub class='year'>, 2023</sub></h1>
+         <h2>Second Step: Scanning Images and Transform them into the Testong set</h2>
+          <p>In the video, I explained through how the scanned images are stored and transformed 
+          into the machine learning model we built from last time. It is demonstrated in a HTML
+          front end and a python back end.</p>
+        <video width="320" height="240" controls>
+            <source src="meeting-03_Zkg3q9Md.mp4" type="video/mp4">
+        </video>
 
 </div>
       </main>
