--- a/brailleblog.htm
+++ b/brailleblog.htm
@@ -77,7 +77,7 @@
           into the machine learning model we built from last time. It is demonstrated in a HTML
           front end and a python back end.</p>
         <video width="320" height="240" controls>
-            <source src="meeting-03_Zkg3q9Md.mp4" type="video/mp4">
+            <source src="BrailleBlog/meeting-03_Zkg3q9Md.mp4" type="video/mp4">
         </video>
 
 </div>
