--- a/poetry.htm
+++ b/poetry.htm
@@ -116,6 +116,27 @@
                 The meandering streams lagging and dragging their tails.    <br>
                 In the moment of drying, I break the flow.     
                 </p>
+
+            <h2 id='Her Death'>Her Death</h2>
+                <p>
+                She walked through a lush valley on a mid-March day. <br>
+                Azalea woke when her skirt flare brushed the green limb. <br>
+                Raindrops fell, and the wind carried grass seeds away. <br>
+                The universe bloomed, singing a sweet old hymn. <br><br>
+
+                It all changed when a few mud dots dropped <br>
+                From her hand to the ground, growing and being enlightened. <br>
+                They marched; they conquered; They pressed down the universe to be bowed.<br>
+                They buried her in the new world as if it was brightened.<br><br>
+
+                The king of nature! His voice is carried by billowing smoke.<br>
+                His vehicle shackles wild horses and strangles wandering whales.<br>
+                He kidnaps beauty and takes pride in putting her in yoke.<br>
+                His ignorance is the opening anthem of a decade of assail.<br><br>
+
+                Help, help! Now he whimpers in the fires and storms.<br>
+                The king of nature! In the silence of new world, nobody mourns.</p>
+
 </p>
 
         </div>
