--- a/poetry.htm
+++ b/poetry.htm
@@ -32,6 +32,7 @@
                         <li><a href="#A Poem for Misery">A Poem for Misery</a></li>
                         <li><a href="#Purple Sky">Purple Sky</a></li>
                         <li><a href="#The Sky Is a Big Hole">The Sky Is a Big Hole</a></li>
+                        <li><a href="#Her Death">Her Death</a></li>
                         <!-- Add more links as needed -->
                 </ul>
         </div>
@@ -114,7 +115,7 @@
                 The world has become a big hole,       <br>
                 Stuffed with bright red and oily green ink. <br>
                 The meandering streams lagging and dragging their tails.    <br>
-                In the moment of drying, I break the flow.     
+                In the moment of drying, I break the flow.     <br>
                 </p>
 
             <h2 id='Her Death'>Her Death</h2>
