--- a/poetry.htm
+++ b/poetry.htm
@@ -33,6 +33,7 @@
                         <li><a href="#Purple Sky">Purple Sky</a></li>
                         <li><a href="#The Sky Is a Big Hole">The Sky Is a Big Hole</a></li>
                         <li><a href="#Her Death">Her Death</a></li>
+                        <li><a href="#Time">Time</a></li>
                         <!-- Add more links as needed -->
                 </ul>
         </div>
@@ -118,7 +119,7 @@
                 In the moment of drying, I break the flow.     <br>
                 </p>
 
-            <h2 id='Her Death'>Her Death</h2>
+            <h2 id='Her Death'><br> Her Death</h2>
                 <p>
                 She walked through a lush valley on a mid-March day. <br>
                 Azalea woke when her skirt flare brushed the green limb. <br>
@@ -137,6 +138,14 @@
 
                 Help, help! Now he whimpers in the fires and storms.<br>
                 The king of nature! In the silence of new world, nobody mourns.</p>
+
+                <h2 id='Time'><br>Time</h2>
+                <p>
+                Time <br>
+                Endless and fugacious  <br>
+                Fleeting, jolting, repeating  <br>
+                Like an everlasting river  <br>
+                Eternity.</p>
 
 </p>
 
