--- a/brailleblog.htm
+++ b/brailleblog.htm
@@ -79,7 +79,26 @@
         <video width="320" height="240" controls>
             <source src="BrailleBlog/meeting-03_Zkg3q9Md.mp4" type="video/mp4">
         </video>
-
+     </div>
+<div class="blog">
+        <!-- Blog content for the first post -->
+        <h1><sup>October</sup> / <sub>2</sub><sub class='year'>, 2023</sub></h1>
+         <h2>Deploy Translator!</h2>
+        <video width="320" height="240" controls>
+            <source src="BrailleBlog/meeting_04.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div class="blog">
+        <!-- Blog content for the first post -->
+        <h1><sup>October</sup> / <sub>9</sub><sub class='year'>, 2023</sub></h1>
+         <h2>Test and Reflection</h2>
+      <p>As I have deployed the translator, I asked the children and volunteers from our Braille Organization for the Blind
+      to test the website and give their advices. We found that while the translator worked well with white Braille texts in white 
+      background, the translator failed to recognize Braille in differnet colors, lights, and angles.</p>
+        <video width="320" height="240" controls>
+            <source src="BrailleBlog/meeting05.mp4" type="video/mp4">
+        </video>
+    </div>
 </div>
       </main>
 
