--- a/index.htm
+++ b/index.htm
@@ -105,11 +105,14 @@ function showSlides(n) {
     </div>
     <div class="text-container">
         <h2>Braille Translator</h2>
-        <p>I am now developing a Braile-to-English image translator... The general idea is
+        <p>I am now developing a Braile-to-English image translator. The general idea is
         to train a deep learning model to recognzie Braille characters in English letters,
         adapt an image scanning tool, and deploy it on a web. I will document my progress and
         improvment every week here. Click the Braille Blog section to check more details about
-        my work!</p>
+        my work! <br>
+        Here is the link for my <a href="https://braillebook.github.io./">
+         Braille Book Organization for the Blind</a>! You can also check our <a href="https://wevisiontranslator-897714070fe3.herokuapp.com/">prototype</a> 
+            for the Braille-to-English translator! </p>
     </div>
     </section>
 
@@ -168,7 +171,6 @@ function showSlides(n) {
     </div>
     <p><i class='fa fa-id-card'></i> <span></span>Iris Li</p>
     <p><i class='fa fa-envelope'></i> <span></span>e-mail: lli@stjames.edu</p>
-    <p><i class='fa fa-phone'></i> <span></span>phone: (1)240-217-3465</p>
     </footer>
 </body>
 </html>
