--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
     <meta name='keywords' content='Iris Li, Website'>
     <meta name='description' content="Iris Li's Website about Herself">
     <meta name='author' content='Iris Yushan Li'>
+    <meta name="robots" CONTENT="nofollow">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
