--- a/index.htm
+++ b/index.htm
@@ -158,6 +158,24 @@ function showSlides(n) {
     </div>
     </section>
 
+    <section class="contact">
+        <form action="action_page.php">
+
+    <label for="fname">Name</label>
+    <input type="text" id="fname" name="name" placeholder="Your name..">
+
+    <label for="fname">E-mail</label>
+    <input type="text" id="femail" name="email" placeholder="Your email..">
+
+    <label for="subject">Message</label>
+    <textarea id="message" name="message" placeholder="Your Message.." style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+
+  </form>
+    </section>
+        
+
     </main>
     <footer>
         <!-- Footer content goes here -->
@@ -170,7 +188,6 @@ function showSlides(n) {
     </script>
     </div>
     <p><i class='fa fa-id-card'></i> <span></span>Iris Li</p>
-    <p><i class='fa fa-envelope'></i> <span></span>e-mail: lli@stjames.edu</p>
     </footer>
 </body>
 </html>
