--- a/index.htm
+++ b/index.htm
@@ -116,19 +116,6 @@ function showSlides(n) {
     </div>
     </section>
 
-    <section class="activity reversed">
-    <div class="text-container">
-        <h2>Poetry</h2>
-        <p>I started to write poems since 4th grade. Different from a novel or a story which
-        I attempted to shape an experience or describe a relationship, poetry is more like
-        a flash of light or a piece of a brightly colored oil painting. Click the poetry section
-        to enjoy some of my poems!</p>
-    </div>
-    <div class="image-container">
-        <img src="poetry.jpg" alt="Poetry Image">
-    </div>
-    </section>
-
     <section class="activity">
     <div class="image-container">
         <img src="activity3.png" alt="Research">
@@ -159,6 +146,7 @@ function showSlides(n) {
     </section>
 
     <section class="contact">
+        <h2>Contact Form</h2>
         <form action="action_page.php">
 
     <label for="fname">Name</label>
