--- a/index.htm
+++ b/index.htm
@@ -153,10 +153,10 @@ function showSlides(n) {
     <label for="fname">Name</label>
     <input type="text" id="fname" name="name" placeholder="Your name..">
 
-    <label for="fname">E-mail</label>
+    <label for="fmail">E-mail</label>
     <input type="text" id="femail" name="email" placeholder="Your email..">
 
-    <label for="subject">Message</label>
+    <label for="message">Message</label>
     <textarea id="message" name="message" placeholder="Your Message.." style="height:200px"></textarea>
 
     <input type="submit" value="Submit">
