--- a/brailleblog.htm
+++ b/brailleblog.htm
@@ -34,6 +34,15 @@
        </header>
 
      <main>
+         <div class="blog">
+        <!-- Blog content for the first post -->
+        <h1><sup>October</sup> / <sub>17</sub><sub class='year'>, 2023</sub></h1>
+         <h2>Fix Problems and Deploy it Again!</h2>
+        <video width="320" height="240" controls>
+            <source src="BrailleBlog/meeting_06.mp4" type="video/mp4">
+        </video>
+    </div>
+       
           <div class="blog-container">
              <div class="blog">
         <!-- Blog content for the first post -->
