--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 			   			<div class="row">
 				   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 slider-text">
 				   				<div class="slider-text-inner">
-				   					<h1>Hi, I'm Iris Li</h1>
-										<h2>Welcome to my personal website! <br>I am curretly a student of Saint James
+				   					<h1 style="color: white">Hi, I'm Iris Li</h1>
+										<h2 style="color: white">Welcome to my personal website! <br>I am curretly a student of Saint James
                                         School. I will introduce you into my world of AI technology, arts, and Braille inventions
                                         here. Explore more about me!</h2>
 				   				</div>
@@ -119,19 +119,7 @@
 				   		</div>
 			   		</div>
 			   	</li>	
-				<li style="background-image: url(images/slide1.jpg);">
-			   		<div class="overlay-gradient"></div>
-			   		<div class="container-fluids">
-			   			<div class="row">
-				   			<div class="col-md-6 col-md-offset-3 slider-text">
-				   				<div class="slider-text-inner text-center">
-				   					<h1 style="color: white">Learn My School Life</h1>
-										
-				   				</div>
-				   			</div>
-				   		</div>
-			   		</div>
-			   	</li>
+				
 			  	</ul>
 		  	</div>
 		</aside>
