--- a/blog.html
+++ b/blog.html
@@ -197,7 +197,7 @@
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
 						<video width="320" height="240" controls>
-                            <source src="BrailleBlog/meeting_1.mp4" type="video/mp4">
+                            <source src="https://youtu.be/23Uq5wZQQ1Y?si=-Zf0RtkgqB6zSvM1" type="video/mp4">
                         </video>
 						<div class="blog-text">
 							<span class="posted_on">Sep. 8th 2023</span>
