--- a/blog.html
+++ b/blog.html
@@ -196,9 +196,9 @@
 				</div>
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<video width="320" height="240" controls>
-                            <source src="https://youtu.be/23Uq5wZQQ1Y?si=-Zf0RtkgqB6zSvM1" type="video/mp4">
-                        </video>
+						<iframe width="320" height="240"
+						src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
+						</iframe>
 						<div class="blog-text">
 							<span class="posted_on">Sep. 8th 2023</span>
 							<h3><a href="#">My Inspiration for the Braille Translator</a></h3>
