--- a/blog.html
+++ b/blog.html
@@ -113,9 +113,9 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<video width="320" height="240" controls>
-                            <source src="BrailleBlog/meeting_6.mp4" type="video/mp4">
-                        </video>
+						<iframe width="320" height="240"
+						src="https://youtu.be/8inXzKmxJnw?si=tMUthvGqWol5R1QC">
+						</iframe>
 						<div class="blog-text">
 							<span class="posted_on">Oct. 17th 2023</span>
 							<h3>Fix Problems and Deploy it Again!</h3>
@@ -128,9 +128,9 @@
 				</div>
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						 <video width="320" height="240" controls>
-                            <source src="BrailleBlog/meeting05.mp4" type="video/mp4">
-                        </video>
+						<iframe width="320" height="240"
+						src="https://youtu.be/rbOBqKozM9o?si=d6h9uDMyesJGQG3V">
+						</iframe>
 						<div class="blog-text">
 							<span class="posted_on">Oct. 9th 2023</span>
 							<h3><a href="#">Test the Translator Prototype and Reflectio</a></h3>
@@ -143,9 +143,9 @@
 				</div>
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<video width="320" height="240" controls>
-                            <source src="BrailleBlog/meeting_4.mp4" type="video/mp4">
-                        </video>
+						<iframe width="320" height="240"
+						src="https://youtu.be/2Sl1-IDKb7I?si=Zziue01IS2OyQeEj">
+						</iframe>
 						<div class="blog-text">
 							<span class="posted_on">Oct. 2nd 2023</span>
 							<h3><a href="#">Deploy Translator!</a></h3>
@@ -160,9 +160,9 @@
             <div class="row" >
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<video width="320" height="240" controls>
-                            <source src="BrailleBlog/meeting_3.mp4" type="video/mp4">
-                        </video>
+						<iframe width="320" height="240"
+						src="https://youtu.be/gjFNZUxqdrI?si=6_AA-LQcy0tgvTZL">
+						</iframe>
 						<div class="blog-text">
 							<span class="posted_on">Sep. 25th 2023</span>
 							<h3>Second Step: Scanning Images and Transform them into the Testong set</h3>
@@ -178,9 +178,9 @@
 				</div>
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<video width="320" height="240" controls>
-                            <source src="BrailleBlog/meeting_2.mp4" type="video/mp4">
-                        </video>
+						<iframe width="320" height="240"
+						src="https://youtu.be/e0kyVTe2zr4?si=DfcqK8KfG0kbK1EF">
+						</iframe>
 						<div class="blog-text">
 							<span class="posted_on">Sep. 17th 2023</span>
 							<h3><a href="#">First Step: Train a Machine Learning Model</a></h3>
@@ -197,7 +197,7 @@
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
 						<iframe width="320" height="240"
-						src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
+						src="https://youtu.be/23Uq5wZQQ1Y?si=JoJ7DiO4MZQJzkvu">
 						</iframe>
 						<div class="blog-text">
 							<span class="posted_on">Sep. 8th 2023</span>
