--- a/blog.html
+++ b/blog.html
@@ -114,7 +114,7 @@
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
 						<iframe width="320" height="240"
-						src="https://youtu.be/8inXzKmxJnw?si=tMUthvGqWol5R1QC">
+						src="https://www.youtube.com/embed/8inXzKmxJnw">
 						</iframe>
 						<div class="blog-text">
 							<span class="posted_on">Oct. 17th 2023</span>
@@ -129,7 +129,7 @@
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
 						<iframe width="320" height="240"
-						src="https://youtu.be/rbOBqKozM9o?si=d6h9uDMyesJGQG3V">
+						src="https://www.youtube.com/embed/rbOBqKozM9o">
 						</iframe>
 						<div class="blog-text">
 							<span class="posted_on">Oct. 9th 2023</span>
@@ -144,7 +144,7 @@
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
 						<iframe width="320" height="240"
-						src="https://youtu.be/2Sl1-IDKb7I?si=Zziue01IS2OyQeEj">
+						src="https://www.youtube.com/embed/2Sl1-IDKb7I">
 						</iframe>
 						<div class="blog-text">
 							<span class="posted_on">Oct. 2nd 2023</span>
@@ -161,7 +161,7 @@
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
 						<iframe width="320" height="240"
-						src="https://youtu.be/gjFNZUxqdrI?si=6_AA-LQcy0tgvTZL">
+						src="https://www.youtube.com/embed/gjFNZUxqdrI">
 						</iframe>
 						<div class="blog-text">
 							<span class="posted_on">Sep. 25th 2023</span>
@@ -179,7 +179,7 @@
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
 						<iframe width="320" height="240"
-						src="https://youtu.be/e0kyVTe2zr4?si=DfcqK8KfG0kbK1EF">
+						src="https://www.youtube.com/embed/e0kyVTe2zr4">
 						</iframe>
 						<div class="blog-text">
 							<span class="posted_on">Sep. 17th 2023</span>
@@ -197,7 +197,7 @@
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
 						<iframe width="320" height="240"
-						src="https://youtu.be/23Uq5wZQQ1Y?si=JoJ7DiO4MZQJzkvu">
+						src="https://www.youtube.com/embed/23Uq5wZQQ1Y">
 						</iframe>
 						<div class="blog-text">
 							<span class="posted_on">Sep. 8th 2023</span>
