--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			</div>
 		</div>
 	</nav>
-	<div class="container-wrap" style="width: 1200px;">
+	<div class="container-wrap" style="width: 1200;">
 		<aside id="fh5co-hero">
 			<div class="flexslider">
 				<ul class="slides">
