--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
 		
 	<div class="fh5co-loader"></div>
 	
-	<div id="page">
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container-wrap">
 			<div class="top-menu">
@@ -83,7 +82,7 @@
 						</ul>
 					</div>
 				</div>
-				
+
 			</div>
 		</div>
 	</nav>
@@ -93,7 +92,7 @@
 				<ul class="slides">
 			   	<li style="background-image: url(images/slide2.jpg);">
 			   		<div class="overlay-gradient"></div>
-			   		<div class="container-fluid">
+			   		<div class="container-fluids">
 			   			<div class="row">
 				   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 slider-text">
 				   				<div class="slider-text-inner">
@@ -106,11 +105,11 @@
 				   		</div>
 			   		</div>
 			   	</li>
-			   	<li style="background-image: url(images/slide3.jpg);">
+                <li style="background-image: url(images/slide3.jpg);">
 			   		<div class="overlay-gradient"></div>
-			   		<div class="container-fluid">
+			   		<div class="container-fluids">
 			   			<div class="row">
-				   			<div class="col-md-6 col-md-offset-3 col-md-push-3 slider-text">
+				   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 slider-text">
 				   				<div class="slider-text-inner">
 				   					<h1 style="color: white">Learn Me and My Community</h1>
 										<h2 style="color: white">Me in the Heritage Restoration Volunteer Service</h2>
@@ -118,12 +117,10 @@
 				   			</div>
 				   		</div>
 			   		</div>
-			   	</li>	
-				
+			   	</li>
 			  	</ul>
 		  	</div>
 		</aside>
-        </div>
 
 		<div id="fh5co-work" class="fh5co-light-grey">
 			<div class="row animate-box">
@@ -131,7 +128,7 @@
 			<div class="row">
 				<div class="col-md-4 text-center animate-box">
 				    <h2>Braille Blog</h2>
-					<a href="blog.html" class="work"  style="background-image: url(images/activity1.jpg);">
+					<a href="blog.html" class="work"  style="width: 400; background-image: url(images/activity1.jpg);">
 						<div class="desc">
 							<h3>Braille Translator</h3>
 						</div>
@@ -147,7 +144,7 @@
 				</div>
 				<div class="col-md-4 text-center animate-box">
 				    <h2>Research</h2>
-					<a href="about.html" class="work" style="background-image: url(images/activity2.jpg);">
+					<a href="about.html" class="work" style="width: 400; background-image: url(images/activity2.jpg);">
 						<div class="desc">
 							<h3>Research Paper "An Analysis on Leadership and Responsibility Aversion"
                             <br>and<br> "A Novel Music Emotional Recognizer"</h3>
@@ -161,9 +158,9 @@
         deal with mental illness. Click the Research section to learn more about what
         I have explored! </p>
 				</div>
-				<div class="col-md-4 text-center animate-box">
+				<div class="col-md-4 text-center animate-box" style="width: 700;">
 				    <h2>Poetry</h2>
-					<a href="work.html" class="work" style="background-image: url(images/activity3.jpg);">
+					<a href="work.html" class="work" style="width: 400; background-image: url(images/activity3.jpg);">
 						<div class="desc">
 							<h3>117 Poems in 10 Years</h3>
 						</div>
@@ -175,7 +172,7 @@
 				</div>
 			</div>
 		</div>
-
+	</div>
 
 	
 	<!-- jQuery -->
