--- a/work.html
+++ b/work.html
@@ -3,12 +3,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Neat &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>Yushan (Iris) Li's Website</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+	<meta name="description" content="Iris Li's Website" />
+	<meta name="keywords" content="personal website" />
 	<meta name="author" content="freehtml5.co" />
-
 	<!-- 
 	//////////////////////////////////////////////////////
 
@@ -69,7 +68,7 @@
 			<div class="top-menu">
 				<div class="row">
 					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="index.html">Iris Li</a></div>
+						<div id="fh5co-logo"><a href="index.html">Yushan (Iris) Li</a></div>
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
