--- a/about.html
+++ b/about.html
@@ -100,10 +100,7 @@
 				   			<div class="col-md-6 col-md-offset-3 slider-text slider-text-bg">
 				   				<div class="slider-text-inner text-center">
 				   					<h1 style="color: white">Research</h1>
-										<h2><a href="https://drive.google.com/file/d/1jrbO6mGqgh7YstK1LuArBMft0Gz9RVSa/view?usp=sharing" target="_blank" style="color: white">
-										    “A Novel Music Recommendation System using Music-Emotion Recognition Models”</a>
-                                        <br><a href="https://drive.google.com/file/d/1oLYEuWmwwDNriw1bTF_j2-rLF1AUYiRG/view?usp=drive_link" target="_blank" style="color: white">
-                                            “An Analysis on the Relationship between Leadership and Responsibility Aversion”</a></h2>
+										
 				   				</div>
 				   			</div>
 				   		</div>
@@ -123,7 +120,10 @@
                      The experience of playing the violin inspired me to discover the relationship
                      between musical emotions and fundamental musical elements. Using three AI
                      models, I attempted to predict four types of emotions based on more than a hundred
-                     types of musical features.</p>
+                     types of musical features.
+					 <br>The paper is in the process of publication.</p>
+					<p><a href="https://drive.google.com/file/d/1jrbO6mGqgh7YstK1LuArBMft0Gz9RVSa/view?usp=sharing" target="_blank" style="color: white">
+										    “A Novel Music Recommendation System using Music-Emotion Recognition Models”</a></p>
 				</div>
 			</div>
 		</div>
@@ -141,7 +141,11 @@
                      (FuSSO) decided to take a different perspective to study the possibility of
                      responsibility aversion brought on by the pressures of leadership. Through
                      an online survey, we collected and analyzed 160 high school and college
-                     students' perceptions of leadership and responsibility.</p>
+                     students' perceptions of leadership and responsibility.
+					 <br>The paper is in the process of publication.</p>
+					
+					  <p><a href="https://drive.google.com/file/d/1oLYEuWmwwDNriw1bTF_j2-rLF1AUYiRG/view?usp=drive_link" target="_blank" style="color: white">
+                                            “An Analysis on the Relationship between Leadership and Responsibility Aversion”</a></p>
 				</div>
 			</div>
 		</div>
