--- a/about.html
+++ b/about.html
@@ -121,8 +121,8 @@
                      between musical emotions and fundamental musical elements. Using three AI
                      models, I attempted to predict four types of emotions based on more than a hundred
                      types of musical features.
-					 <br>The paper is in the process of publication.</p>
-					<p><a href="https://drive.google.com/file/d/1jrbO6mGqgh7YstK1LuArBMft0Gz9RVSa/view?usp=sharing" target="_blank" style="color: white">
+					 <br>The paper is in the process of publication.
+					<a href="https://drive.google.com/file/d/1jrbO6mGqgh7YstK1LuArBMft0Gz9RVSa/view?usp=sharing" target="_blank" >
 										    “A Novel Music Recommendation System using Music-Emotion Recognition Models”</a></p>
 				</div>
 			</div>
@@ -142,9 +142,9 @@
                      responsibility aversion brought on by the pressures of leadership. Through
                      an online survey, we collected and analyzed 160 high school and college
                      students' perceptions of leadership and responsibility.
-					 <br>The paper is in the process of publication.</p>
+					 <br>The paper is in the process of publication.
 					
-					  <p><a href="https://drive.google.com/file/d/1oLYEuWmwwDNriw1bTF_j2-rLF1AUYiRG/view?usp=drive_link" target="_blank" style="color: white">
+					  <a href="https://drive.google.com/file/d/1oLYEuWmwwDNriw1bTF_j2-rLF1AUYiRG/view?usp=drive_link" target="_blank" >
                                             “An Analysis on the Relationship between Leadership and Responsibility Aversion”</a></p>
 				</div>
 			</div>
