--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="work.html">Poetry</a></li>
+							<li><a href="work.html">LuminaSpeak Blog</a></li>
 							<li><a href="blog.html">Braille Blog</a></li>
 							<li><a href="about.html">Research</a></li>
 							<li><a href="contact.html">Contact</a></li>
@@ -159,16 +159,16 @@
         I have explored! </p>
 				</div>
 				<div class="col-md-4 text-center animate-box" style="width: 700;">
-				    <h2>Poetry</h2>
+				    <h2>LuminaSpeak Blog</h2>
 					<a href="work.html" class="work" style="width: 400; background-image: url(images/activity3.jpg);">
 						<div class="desc">
-							<h3>117 Poems in 10 Years</h3>
+							<h3>A Text-to-Audio Tool for the Blind</h3>
 						</div>
 					</a>
-                    <p>I started to write poems since 4th grade. Different from a novel or a story which
-        I attempted to shape an experience or describe a relationship, poetry is more like
-        a flash of light or a piece of a brightly colored oil painting. Click the poetry section
-        to enjoy some of my poems!</p>
+                    <p>I am now developing a document reader for blind students. It assists blind students 
+			    in accessing written content by converting digital text or scanned physical text into natural-sounding speech.
+		    The tool helped the blind get access to more academic materials through audio. Moreover, it can be applied in 
+		    day-to-day life since many texts in our daily life do not have a proper Braille translation.</p>
 				</div>
 			</div>
 		</div>
